dev:01-SideButton disappears and fixed overlap

--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -1,6 +1,9 @@
+.sidebar{
+    z-index: 1999;
+}
 
 .menu-body{
-    background: linear-gradient(45deg,rgba(0, 0, 0, .85),rgba(65, 105, 225, .86) 50%,rgba(255, 255, 255, 0.2) 20%) !important;
+    background: linear-gradient(45deg,rgba(0, 0, 0, .85),rgba(65, 105, 225, .86) 45%,rgba(255, 255, 255, 0.2) 20%) !important;
     box-shadow: 0 0px 30px rgba(0, 0, 0, 0.1)!important;
     backdrop-filter: blur(5px)!important;
     -webkit-backdrop-filter: blur(5px)!important;
@@ -18,6 +21,7 @@
     -webkit-backdrop-filter: blur(5px)!important;
   
     min-width: 120px;
+    
 }
 
 .menu-links{
@@ -42,4 +46,11 @@
     display: flex !important;
     width: 100% !important;
     justify-content: flex-start !important;
+}
+
+@media (max-width: 768px) {
+    .rounded-pill{
+        border-radius: 0px !important;
+     
+    }
 }
